-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P3
-
Affects Version/s: 11, 14
-
Component/s: hotspot
-
b21
-
generic
-
generic
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8242648 | 11.0.7-oracle | Vladimir Kozlov | P3 | Resolved | Fixed |
Sync latest fixes from graal-jvmci-8 (preliminary list - could be changed)
a8026aa Wed Oct 2 20:01:14 2019 +0000 Tom Rodriguez [GR-18629] Fix compilation problem on windows.
ef2d84b Fri Sep 27 17:37:39 2019 +0000 Tom Rodriguez [GR-17318] Add isBeingInitialized.
547a464 Fri Sep 20 06:20:07 2019 +0000 Tom Rodriguez [GR-18349] Add default implementation for encoded SpeculationReasons.
152f6e5 Fri Aug 30 08:28:43 2019 +0000 Doug Simon [GR-17920] Handle missing or non-cloneable SHA-1 implementation.
4bfca5a Thu Aug 22 12:55:21 2019 +0000 Tomáลก Zezula [GR-16353] Added a getter of an address of current JavaThread into HotSpotJVMCIRuntime.
Next change requires additional change in vmStructs_jvmci.cpp () - add declaration for InstanceKlass::being_initialized:
[GR-17318] Add isBeingInitialized
and Graal changes included inJDK-8229201 Graal Update:
[GR-17318] Add dynamic initialization guard for klass references that require initialization.
Next changes are handled by different JBS issues and not included in this list:
JDK-8229377 : [GR-17480] Improve InstalledCode.invalidate for large code caches.
JDK-8231756 : [GR-16685] Deoptimization can recover a virtualized byte array.
Next changes were pushed already:
JDK-8231586 [GR-18347] Reduce bits required for OopMapValue::oop_types + [GR-18537] Fix bug in debug code from OopMap changes.
JDK-8231754 [GR-18565] Reserve r27 unconditionally.
JDK-8227068 [GR-16980] Add support for Unsafe.copyMemory invalid memory access failure handling.
Next change requires discussion with GC group because TLAB code changed (may be create separate bug):
[GR-17293] Add ZapTLAB option to detect overwriting past top in product mode.
Next change is not applicable to JVMCI in JDK because it does not have JVMCIClassLoader:
[GR-17552] Do not use os:read in Arguments::finalize_vm_init_args.
Next change is not applicable afterJDK-8227653 which replaced conditional JVMCI global storage with VM global storage
[GR-17641] Report JVMCI root objects as jni roots in heap dump.
a8026aa Wed Oct 2 20:01:14 2019 +0000 Tom Rodriguez [GR-18629] Fix compilation problem on windows.
ef2d84b Fri Sep 27 17:37:39 2019 +0000 Tom Rodriguez [GR-17318] Add isBeingInitialized.
547a464 Fri Sep 20 06:20:07 2019 +0000 Tom Rodriguez [GR-18349] Add default implementation for encoded SpeculationReasons.
152f6e5 Fri Aug 30 08:28:43 2019 +0000 Doug Simon [GR-17920] Handle missing or non-cloneable SHA-1 implementation.
4bfca5a Thu Aug 22 12:55:21 2019 +0000 Tomáลก Zezula [GR-16353] Added a getter of an address of current JavaThread into HotSpotJVMCIRuntime.
Next change requires additional change in vmStructs_jvmci.cpp () - add declaration for InstanceKlass::being_initialized:
[GR-17318] Add isBeingInitialized
and Graal changes included in
[GR-17318] Add dynamic initialization guard for klass references that require initialization.
Next changes are handled by different JBS issues and not included in this list:
Next changes were pushed already:
Next change requires discussion with GC group because TLAB code changed (may be create separate bug):
[GR-17293] Add ZapTLAB option to detect overwriting past top in product mode.
Next change is not applicable to JVMCI in JDK because it does not have JVMCIClassLoader:
[GR-17552] Do not use os:read in Arguments::finalize_vm_init_args.
Next change is not applicable after
[GR-17641] Report JVMCI root objects as jni roots in heap dump.
- backported by
-
JDK-8242648 Update JVMCI
-
- Resolved
-
- duplicates
-
JDK-8230369 [JVMCI] handle non-cloneable SHA-1 MessageDigest implementation
-
- Closed
-
-
JDK-8231828 [JVMCI] Add a getter of an address of current JavaThread into HotSpotJVMCIRuntime.
-
- Closed
-