8232904: Update JVMCI

Reviewed-by: dnsimon